Fix image gap

--- a/content/themes/dude/sass/gutenberg/blocks/_image.scss
+++ b/content/themes/dude/sass/gutenberg/blocks/_image.scss
@@ -20,3 +20,7 @@
     }
   }
 }
+
+.block-image.is-full-width img {
+  margin-bottom: -8px;
+}
